# web-actix

./: .env  Cargo.toml  README.md
postsqlx/: .env  Cargo.toml  README.md
postsqlx/sql/: db.sql
postsqlx/src/: main.rs
webapp/: Cargo.toml  README.md
webapp/src/: errors.rs  handler.rs  lib.rs  main.rs  models.rs  routes.rs
webapp/static/: register.html  teachers.html
webapp/static/css/: register.css
webservice/: Cargo.toml  README.md
webservice/src/: db_access.rs  errors.rs  handlers.rs  lib.rs  models.rs  routers.rs  state.rs
webservice/src/dbaccess/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  general.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
webwasm/: Cargo.toml  Docs.md  LICENSE_MIT
webwasm/src/: errors.rs  lib.rs
webwasm/src/models/: course.rs
webwasm/wasmapp/: index.html  index.js  package-lock.json  package.json
