[package]
name = "postsqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.3.1"   
dotenv = "0.15.0"
openssl = {version = "0.10.52", features = ["vendored"]}
serde = { version = "1.0.183", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
sqlx = { version = "0.8.2", features = [
   "runtime-tokio-rustls", "postgres", "chrono", "macros",
]}

