[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"

[dependencies]
# http 服务器
actix-web = "4.3.1"
# 提供为 actix-web 异步运行时
actix-rt = "2.10.0"
# 提供 json 序列化
serde = { version = "1.0.188", features = ["derive"] }
# 配合 serde 序列化时提供时间处理的能力
chrono = { version = "0.4.26", features = ["serde"] }

[[bin]]
name = "server1"

[[bin]]
name = "teacher-service"
